todos-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todos-api-service
spec:
  # type: ClusterIP
  selector:
    app: todos-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
