k8s-deployment.yaml
# k8s-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
        - name: go-api-container
          image: <your-go-api-image> # Replace with your Docker image
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
spec:
  selector:
    app: go-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: <your-ingress-hostname> # Replace with your ingress hostname
      http:
        paths:
          - path: /todos-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: go-api-service
                port:
                  number: 80
